--- a/src/app/app.html
+++ b/src/app/app.html
@@ -15,6 +15,9 @@
             <a class="nav-link" routerLink="data-binding">Data Binding</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="signals">Signals</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="employee-list">Employee List</a>
           </li>
         </ul>
