--- a/src/app/app.html
+++ b/src/app/app.html
@@ -18,6 +18,9 @@
             <a class="nav-link" routerLink="control-flow">Control Flow</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="attribute-directive">Attribute Directive</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="signals">Signals</a>
           </li>
           <li class="nav-item">
