--- a/src/app/app.html
+++ b/src/app/app.html
@@ -21,6 +21,9 @@
             <a class="nav-link" routerLink="attribute-directive">Attribute Directive</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="reactive-forms">Reactive Forms</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="template-form">Template Form</a>
           </li>
           <li class="nav-item">
