Signals Forms Done

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -24,6 +24,9 @@
             <a class="nav-link" routerLink="reactive-forms">Reactive Forms</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="signal-forms">Signal Forms</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="pipes">Pipes</a>
           </li>
           <li class="nav-item">
