--- a/src/app/app.html
+++ b/src/app/app.html
@@ -36,6 +36,9 @@
             <a class="nav-link" routerLink="signals">Signals</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="life-cycle">Life Cycle</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="employee-list">Employee List</a>
           </li>
         </ul>
