Services Done. Modified GetAPI component

--- a/src/app/pages/get-api/get-api.html
+++ b/src/app/pages/get-api/get-api.html
@@ -22,3 +22,6 @@
     </table>
   </div>
 </div>
+<div class="row">
+  <p>Testing the course variable from the todo.Service {{todoService.course}}</p>
+</div>
