--- a/src/app/app.html
+++ b/src/app/app.html
@@ -39,6 +39,9 @@
             <a class="nav-link" routerLink="get-api">Get Api</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="service-test">Service Test</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="life-cycle">Life Cycle</a>
           </li>
           <li class="nav-item">
